<resources>
    <string name="visma_blue_button_send">"Send"</string>
    <string name="visma_blue_button_abort">"Cancel"</string>
    <string name="visma_blue_invoice">"Invoice"</string>
    <string name="visma_blue_receipt">"Receipt"</string>
    <string name="visma_blue_button_demo">"Try the app"</string>
    <string name="visma_blue_button_remove">"Delete"</string>
    <string name="visma_blue_button_login">"Log in"</string>
    <string name="visma_blue_menu_logout">"Log out"</string>
    <string name="visma_blue_icon_title">"Scanner"</string>
    <string name="visma_blue_hint_password">"Password"</string>
    <string name="visma_blue_hint_email">"E-mail address"</string>
    <string name="visma_blue_button_use">"Use"</string>
    <string name="visma_blue_metadata_more_information">"More Information"</string>
    <string name="visma_blue_metadata_more_information_name">"Name"</string>
    <string name="visma_blue_metadata_more_information_due_amount">"Amount"</string>
    <string name="visma_blue_label_image">"View Photo"</string>
    <string name="visma_blue_label_date">"Date"</string>
    <string name="visma_blue_label_type">"Type"</string>
    <string name="visma_blue_label_photo_is_a_copy">"The picture is a copy. Always save the original document."</string>
    <string name="visma_blue_label_photo_is_connected">"The picture has been used and can therefore not be changed."</string>
    <string name="visma_blue_menu_about">"About"</string>
    <string name="visma_blue_label_info2">"Please note that unused pictures, may be deleted from the app after 6 months. The user of the service is responsible to ensure that pictures sent using the service do not violate the law or good ethics."</string>
    <string name="visma_blue_label_type_receipt">"Receipt"</string>
    <string name="visma_blue_label_type_invoice">"Invoice"</string>
    <string name="visma_blue_email_subject">"E-mail from Visma Scanner"</string>
    <string name="visma_blue_email_text">"Image as an attachment. Sent from Visma Scanner."</string>
    <string name="visma_blue_label_comment">"Comment"</string>
    <string name="visma_blue_error_unknown_error">"Please, try again later."</string>
    <string name="visma_blue_error_invalid_user_or_password">"The e-mail address or password you've entered is incorrect."</string>
    <string name="visma_blue_error_no_access_to_application">"You don't have access to the service."</string>
    <string name="visma_blue_error_no_access_to_application_when_sending">"You don't have access to the service and therefore cannot send the picture to the accounting software. Your picture is saved in the app."</string>
    <string name="visma_blue_error_license_agreement_not_accepted">"You have to accept the licence agreement before you can access the service."</string>
    <string name="visma_blue_error_invalid_photo">"The picture is missing."</string>
    <string name="visma_blue_error_invalid_state">"The data cannot be changed."</string>
    <string name="visma_blue_error_invalid_token">"Temporary error. Please, log out of the service and try to log in again."</string>
    <string name="visma_blue_error_blocked_company">"Your business is blocked. Please contact Visma."</string>
    <string name="visma_blue_error_blocked_company_when_sending">"Your account has been blocked Please contact Visma. Your picture is saved in the app."</string>
    <string name="visma_blue_error_user_is_locked">"Your account has been locked, please request a new password."</string>
    <string name="visma_blue_error_empty_password">"Please, enter your password."</string>
    <string name="visma_blue_error_empty_username">"You must enter an e-mail address."</string>
    <string name="visma_blue_error_connection_time_out">"There is no connection to the service."</string>
    <string name="visma_blue_error_unknown_error_when_sending">"Failed to send the image. Your picture is saved in the app and may be sent at a later time."</string>
    <string name="visma_blue_label_not_synced_images">"Not synchronized images"</string>
    <string name="visma_blue_hint_comment">"Comment"</string>
    <string name="visma_blue_flash_on">"On"</string>
    <string name="visma_blue_flash_off">"Off"</string>
    <string name="visma_blue_flash_auto">"Auto"</string>
    <string name="visma_blue_about_licenses">"Third party licenses"</string>
    <string name="visma_blue_toast_unsupported_image_format">"Unsupported image format."</string>
    <string name="visma_blue_typepicker_title">"Type"</string>
    <string name="visma_blue_document">"Document"</string>
    <string name="visma_blue_button_read_from_qr">"Read from QR code"</string>
    <string name="visma_blue_metadata_more_information_total_vat_amount">"Total VAT Amount"</string>
    <string name="visma_blue_metadata_more_information_currency_code">"Currency"</string>
    <string name="visma_blue_metadata_more_information_invoice_date">"Invoice Date"</string>
    <string name="visma_blue_metadata_more_information_due_date">"Due Date"</string>
    <string name="visma_blue_metadata_more_information_reference_number">"Reference Number"</string>
    <string name="visma_blue_metadata_more_information_organisation_number">"Organisation Number"</string>
    <string name="visma_blue_metadata_more_information_high_vat_amount">"High VAT Amount"</string>
    <string name="visma_blue_metadata_more_information_middle_vat_amount">"Middle VAT Amount"</string>
    <string name="visma_blue_metadata_more_information_low_vat_amount">"Low VAT Amount"</string>
    <string name="visma_blue_label_payed">"Paid"</string>
    <string name="visma_blue_label_payment_date">"Payment Date"</string>
    <string name="visma_blue_menu_search">"Search"</string>
    <string name="visma_blue_error_no_companies">"There are no companies attached to this user."</string>
    <string name="visma_blue_menu_add">"Add"</string>
    <string name="visma_blue_empty_list_create_new_document">"Take photo"</string>
    <string name="visma_blue_empty_list">"There are no documents."</string>
    <string name="visma_blue_toast_read_from_qr">"QR information scanned"</string>
    <string name="visma_blue_about_version">"Version"</string>
    <string name="visma_blue_login_tutorial_page_2_title">"Captures"</string>
    <string name="visma_blue_login_tutorial_page_3_title">"Attach photo"</string>
    <string name="visma_blue_login_tutorial_page_1_text">"Send pictures from your mobile to your Visma application."</string>
    <string name="visma_blue_login_tutorial_page_2_text">"Take a picture, add more information if required and press send."</string>
    <string name="visma_blue_login_tutorial_page_3_text">"Now your picture has been sent to your Visma application."</string>
    <string name="visma_blue_login_choose_company">"Choose company"</string>
    <string name="visma_blue_login_tutorial_page_1_title">"Visma Scanner"</string>
    <string name="visma_blue_preference_category_send">"Send"</string>
    <string name="visma_blue_preference_default_email_address_title">"Default Email Address"</string>
    <string name="visma_blue_preference_default_email_address_summary">"The default email address to send images to."</string>
    <string name="visma_blue_menu_settings">"Settings"</string>
    <string name="visma_blue_no_supporting_app_installed">"You need to install an external app to display this type of document."</string>
    <string name="visma_blue_about_generate_inbound_email">"Inbound email address"</string>
    <string name="visma_blue_email_dialog_title">"Inbound email address"</string>
    <string name="visma_blue_document_type_unknown">"Unclassified"</string>
    <string name="visma_blue_not_verified_document">"This document has been uploaded, probably by you, to the service. You need to choose a document type and then save the document in order to keep it. If you don't wan't to keep this document, just delete it."</string>
    <string name="visma_blue_notification_content_text">"New documents to approve"</string>
    <string name="visma_blue_inbound_email_explanation">"Use this email address to forward your electronic documents into the app."</string>
    <string name="visma_blue_about_logged_in_as">"Logged on as"</string>
    <string name="visma_blue_service_title_mamut">"Mamut"</string>
    <string name="visma_blue_service_title_expense">"Visma Expense"</string>
    <string name="visma_blue_service_title_accountview">"AccountView"</string>
    <string name="visma_blue_service_title_spcs">"Visma SPCS"</string>
    <string name="visma_blue_main_activity_title">"Visma Scanner"</string>
    <string name="visma_blue_service_title_netvisor">"Netvisor"</string>
    <string name="visma_blue_spinner_nothing_chosen">"(Empty)"</string>
    <string name="visma_blue_metadata_more_information_zero_vat_amount">"VAT 0%"</string>
    <string name="visma_blue_metadata_more_information_zero_vat_amount_netvisor">"VAT 0%"</string>
    <string name="visma_blue_metadata_more_information_high_vat_amount_netvisor">"VAT 24%"</string>
    <string name="visma_blue_metadata_more_information_low_vat_amount_netvisor">"VAT 10%"</string>
    <string name="visma_blue_metadata_more_information_middle_vat_amount_netvisor">"VAT 14%"</string>
    <string name="visma_blue_service_title_severa">"Severa"</string>
    <string name="visma_blue_error_missing_permission">"The app needs the requested permission to function properly."</string>
    <string name="visma_blue_error_failed_to_download_custom_data">"Failed to download some data."</string>
    <string name="visma_blue_metadata_incorrect_data_message_date">"Start time is after the end time"</string>
    <string name="visma_blue_severa_metadata_case_and_phase">"Case/Phase"</string>
    <string name="visma_blue_severa_metadata_select_case">"Select case"</string>
    <string name="visma_blue_severa_metadata_phase_activity_title">"Select phase"</string>
    <string name="visma_blue_metadata_expense_type">"Expense type"</string>
    <string name="visma_blue_metadata_vat">"VAT"</string>
    <string name="visma_blue_metadata_start_date">"Start date"</string>
    <string name="visma_blue_metadata_end_date">"End date"</string>
    <string name="visma_blue_metadata_start_time">"Start time"</string>
    <string name="visma_blue_metadata_end_time">"End time"</string>
    <string name="visma_blue_hint_comment_expense">"Purpose"</string>
    <string name="visma_blue_email_generate">"Click to generate"</string>
    <string name="visma_blue_preference_automatically_verify_emailed_documents_summary">"Send inbound email directly to your accounting software"</string>
    <string name="visma_blue_preference_automatically_verify_emailed_documents_title">"Send directly to accounting software"</string>
    <string name="visma_blue_preference_default_automatically_verified_type_title">"Default type"</string>
    <string name="visma_blue_preference_category_inbound_email">"Inbound Email"</string>
    <string name="visma_blue_integrations_title">"Select service"</string>
    <string name="visma_blue_integration_online_title">"Visma Administration"</string>
    <string name="visma_blue_integration_eaccounting_title">"Visma eAccounting"</string>
    <string name="visma_blue_integration_mamut_title">"Visma Mamut"</string>
    <string name="visma_blue_integration_expense_manager_title">"Visma Expense"</string>
    <string name="visma_blue_integration_account_view_title">"Visma AccountView"</string>
    <string name="visma_blue_integration_netvisor_title">"Visma Netvisor"</string>
    <string name="visma_blue_integration_severa_title">"Visma Severa"</string>
    <string name="visma_blue_integration_online_description">"Send photos of your receipts or invoices directly to Visma Administration."</string>
    <string name="visma_blue_integration_eaccounting_description">"Take photos of your receipts or invoices and send them directly to eAccounting."</string>
</resources>