<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.visma.blue.metadata.mamut.MamutMetaDataViewModel" />
        <import type="android.view.View"/>
        <variable
            name="metadataViewModel"
            type="com.visma.blue.metadata.mamut.MamutMetaDataViewModel" />

    </data>

    <ScrollView
        android:id="@+id/blue_fragment_metadata_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="13dp"
            android:focusableInTouchMode="true"
            android:paddingRight="13dp">

            <requestFocus />
            <!-- Use android:focusableInTouchMode="true" together with requestFocus
            to prevent the EditText
            from gaining focus and starting it's animation when the view is created -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <TextView
                    android:id="@+id/metaDataInformationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@{metadataViewModel.informationText}"
                   />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layoutType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nc_list_selector_light"
                android:orientation="vertical"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                app:onClickListener="@{metadataViewModel.TypeChangeOnClickListener}"
                app:enabled="@{metadataViewModel.enabled}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/visma_blue_label_type"
                    android:textColor="@color/nc_blue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/typeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@{metadataViewModel.Type}"
                    android:textSize="16sp"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/fragment_metadata_layout_image"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@drawable/nc_list_selector_light"
                android:gravity="center_vertical"
                android:paddingLeft="3dp"
                android:paddingRight="3dp">

                <TextView
                    android:id="@+id/fragment_metadata_image_filename_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visma_blue_label_image"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/fragment_metadata_image_filename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fragment_metadata_image_filename_label"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:text="@string/visma_blue_label_image"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/nc_divider" />

            <LinearLayout
                android:id="@+id/layoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nc_list_selector_light"
                android:minHeight="48dp"
                android:orientation="vertical"
                app:enabled="@{metadataViewModel.enabled}"
                app:onClickListener="@{metadataViewModel.dateOnClickListener}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="4dp"
                    android:text="@string/visma_blue_label_date"
                    android:textColor="@color/nc_blue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nc_spinner_default_holo_light"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:hint="@string/visma_blue_label_date"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textSize="16sp"
                    android:text="@{metadataViewModel.date}"
                    />

            </LinearLayout>

            <com.visma.common.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/commentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/visma_blue_hint_comment"
                    android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                    android:maxLength="1000"
                    android:minHeight="61dp"
                    android:text="@{metadataViewModel.comment}"
                    app:addTextChangedListener="@{metadataViewModel.commentWatcher}"
                    app:enabled="@{metadataViewModel.enabled}"/>

            </com.visma.common.FloatLabelLayout>

        </LinearLayout>

    </ScrollView>

</layout>